--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -251,6 +251,8 @@
               href: /azure/data-explorer/kusto/query/samples?&pivots=azuremonitor
             - name: 標準列
               href: platform/log-standard-columns.md
+            - name: クエリの監査
+              href: log-query/query-audit.md
             - name: クエリの最適化
               href: log-query/query-optimization.md
             - name: 関数
