--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -26,6 +26,8 @@
     - name: ARM テンプレート
       displayName: Resource Manager
       href: quick-create-template.md
+    - name: GitHub のアクション
+      href: quick-create-github-secret.md
 - name: チュートリアル
   items:
     - name: シークレットのローテーション
