--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -90,12 +90,13 @@
           href: de-identified-export.md
     - name: ID オブジェクト ID を見つける
       href: find-identity-object-ids.md
-    - name: Azure API for FHIR® で診断ログを有効にする
-      href: enable-diagnostic-logging.md
-    - name: 診断設定を使用して Azure IoT Connector for FHIR (プレビュー) のメトリックをエクスポートする
-      href: iot-metrics-diagnostics-export.md
-    - name: Azure IoT Connector for FHIR (プレビュー) のメトリックを表示および構成する
-      href: iot-metrics-display.md
+    - name: 診断ログと指標
+      expanded: false
+      items:
+        - name: Azure API for FHIR で診断ログを有効にする
+          href: enable-diagnostic-logging.md
+        - name: Azure IoT Connector for FHIR (プレビュー) のメトリックを表示および構成する
+          href: iot-metrics-display.md
     - name: Azure API for FHIR のトークンを取得する - CLI
       href: get-healthcare-apis-access-token-cli.md
     - name: Azure IoT Connector for FHIR (プレビュー) のエラーのトラブルシューティングを行う
