--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -79,6 +79,46 @@
               href: sync-ldap.md
             - name: SCIM 同期
               href: sync-scim.md
+        - name: 回復性のための構築
+          items:
+            - name: 概要
+              href: resilience-overview.md
+            - name: インフラストラクチャのガイダンス
+              items:
+                - name: インフラストラクチャの概要
+                  href: resilience-in-infrastructure.md
+                - name: 資格情報の管理
+                  href: resilience-in-credentials.md
+                - name: デバイスの状態
+                  href: resilience-with-device-states.md
+                - name: 継続的アクセス評価
+                  href: resilience-with-continuous-access-evaluation.md
+                - name: 外部ユーザーの認証
+                  href: resilience-b2b-authentication.md
+                - name: ハイブリッド認証
+                  href: resilience-in-hybrid.md
+                - name: アプリケーション プロキシ
+                  href: resilience-on-premises-access.md
+            - name: Azure AD B2C のガイダンス
+              items:
+                - name: 回復性に関する Azure AD B2C の概要
+                  href: resilience-b2c.md
+                - name: エンド ユーザー エクスペリエンス
+                  href: resilient-end-user-experience.md
+                - name: 外部プロセスとのインターフェイス
+                  href: resilient-external-processes.md
+                - name: Azure AD B2C 開発者のベスト プラクティス
+                  href: resilience-b2c-developer-best-practices.md
+                - name: 監視と分析
+                  href: resilience-with-monitoring-alerting.md
+            - name: アプリケーション開発のガイダンス
+              items:
+                - name: 開発の概要
+                  href: resilience-app-development-overview.md
+                - name: クライアント アプリケーション
+                  href: resilience-client-app.md
+                - name: デーモン アプリケーション
+                  href: resilience-daemon-app.md
         - name: Azure で使用される証明機関
           href: certificate-authorities.md
     - name: デプロイ ガイド
