--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -37,6 +37,8 @@
           href: how-to-automatic-language-detection.md
         - name: バッチ文字起こし API を使用する
           href: batch-transcription.md
+        - name: 発音を評価する
+          href: how-to-pronunciation-assessment.md
     - name: チュートリアル
       items:
         - name: テナント モデルを使用して精度を向上させる
