--- a/articles/media-services/video-indexer/toc.yml
+++ b/articles/media-services/video-indexer/toc.yml
@@ -54,6 +54,7 @@
     - name: Video Indexer の出力の確認
       href: video-indexer-output-json-v2.md
     - name: ビデオ内の正確な場面の検出
+      displayName: search
       href: video-indexer-search.md
     - name: シーン、ショット、キーフレームの検出
       href: scenes-shots-keyframes.md
