--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -424,5 +424,9 @@
           href: sql-data-warehouse-partner-data-management.md
         - name: 機械学習と AI
           href: sql-data-warehouse-partner-machine-learning-ai.md
+        - name: システム統合
+          href: sql-data-warehouse-partner-system-integration.md
         - name: パブリック プレビュー パートナー
           href: sql-data-warehouse-partner-launch.md
+        - name: サードパーティ アプリケーションとの互換性の問題
+          href: sql-data-warehouse-partner-compatibility-issues.md
