--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -445,61 +445,72 @@
           href: quickstart-create-apache-spark-pool-studio.md
     - name: チュートリアル
       items:
-        - name: Apache Spark アプリケーションを実行する
-          href: ./spark/intellij-tool-synapse.md
-          displayname: intellij
-        - name: Spark プールに対して PySpark アプリケーションを実行する
-          href: ./spark/vscode-tool-synapse.md
-        - name: Spark ジョブ定義
+        - name: Synapse Studio ノートブックを使用したデータの視覚化
+          href: ./spark/apache-spark-data-visualization-tutorial.md
+        - name: Apache Spark と Power BI を使用したデータの分析
+          href: ./spark/apache-spark-to-power-bi.md
+        - name: 機械学習モデルを作成する
+          href: ./spark/apache-spark-machine-learning-mllib-notebook.md
+        - name: Spark ジョブ定義の送信
           href: ./spark/apache-spark-job-definitions.md
     - name: 概念
       items:
-        - name: Apache Spark の概念
+        - name: Apache Spark
           href: ./spark/apache-spark-concepts.md
-        - name: Delta Lake とは
+        - name: Delta Lake
           href: ./spark/apache-spark-what-is-delta-lake.md
-        - name: Delta Lake 機能の概要
-          href: ./spark/apache-spark-delta-lake-overview.md
-        - name: Apache Spark のパフォーマンス
-          href: ./spark/apache-spark-performance.md
-        - name: Hyperspace のインデックスを使用した Apache Spark のパフォーマンス最適化
-          href: ./spark/apache-spark-performance-hyperspace.md
         - name: Apache Spark の自動スケール動作
           href: ./spark/apache-spark-autoscale.md
-        - name: 開発
+        - name: Synapse ランタイム
+          href: ./spark/apache-spark-version-support.md
+        - name: 機械学習
+          href: ./spark/apache-spark-machine-learning-concept.md
+        - name: ノートブック
+          href: ./spark/apache-spark-notebook-concept.md
+        - name: 監視ツール
+          href: monitoring/how-to-monitor-spark-applications.md
+    - name: 操作方法ガイド
+      items:
+        - name: Delta Lake を使用する
+          href: ./spark/apache-spark-delta-lake-overview.md
+        - name: ライブラリを管理する
+          href: ./spark/apache-spark-azure-portal-add-libraries.md
+        - name: Notebooks を使用する
           items:
-            - name: ライブラリ
-              items:
-                - name: ライブラリの追加と管理
-                  href: ./spark/apache-spark-azure-portal-add-libraries.md
-                - name: ランタイム言語とライブラリのサポート
-                  href: ./spark/apache-spark-version-support.md
-            - name: Azure Synapse Studio ノートブック
+            - name: Notebooks を管理する
               href: ./spark/apache-spark-development-using-notebooks.md
-            - name: TokenLibrary を使用した資格情報のセキュリティ保護
-              href: ./spark/apache-spark-secure-credentials-with-tokenlibrary.md
+            - name: データの視覚化
+              href: ./spark/apache-spark-data-visualization.md
+            - name: IntelliJ プラグインを使用して Spark に接続する
+              href: ./spark/intellij-tool-synapse.md
+            - name: VSCode を使用して Spark プールに接続する
+              href: ./spark/vscode-tool-synapse.md
+        - name: 言語の探索
+          items:
             - name: .NET for Apache Spark
               href: ./spark/spark-dotnet.md
-        - name: 監視
+        - name: セキュリティ
+          items:
+            - name: TokenLibrary を使用した資格情報のセキュリティ保護
+              href: ./spark/apache-spark-secure-credentials-with-tokenlibrary.md
+        - name: パフォーマンスを最適化する
+          items:
+            - name: Apache Spark のパフォーマンス
+              href: ./spark/apache-spark-performance.md
+            - name: Hyperspace のインデックスを使用した Apache Spark のパフォーマンス最適化
+              href: ./spark/apache-spark-performance-hyperspace.md
+        - name: 管理および監視
           items:
             - name: Spark プール履歴サーバー
               href: ./spark/apache-spark-history-server.md
-    - name: 操作方法ガイド
-      items:
-        - name: 管理および監視
-          items:
-            - name: Apache Spark アプリケーション
-              href: monitoring/how-to-monitor-spark-applications.md
-            - name: Apache Spark アプリケーションの詳細
+            - name: Spark アプリケーションの監視
               href: monitoring/apache-spark-applications.md
-            - name: Apache Spark を使用して JSON を分析する
-              href: how-to-analyze-complex-schema.md
         - name: データの取り込みと準備
           items:
-            - name: データ ウェアハウスへ
-              items:
-                - name: Apache Spark を使用したデータのインポートとエクスポート
-                  href: ./spark/synapse-spark-sql-pool-import-export.md
+            - name: SQL Data Warehouse
+              href: ./spark/synapse-spark-sql-pool-import-export.md
+            - name: JSON の分析
+              href: how-to-analyze-complex-schema.md
 - name: Synapse Link
   items:
     - name: 概要
@@ -616,6 +627,8 @@
               href: ../data-factory/connector-azure-database-for-mysql.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Azure Database for PostgreSQL
               href: ../data-factory/connector-azure-database-for-postgresql.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+            - name: Azure Databricks Delta Lake
+              href: ../data-factory/connector-azure-databricks-delta-lake.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Azure File Storage
               href: ../data-factory/connector-azure-file-storage.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Azure SQL データベース
@@ -959,8 +972,8 @@
               href: ../data-factory/data-factory-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: コネクタのトラブルシューティング
               href: ../data-factory/connector-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-            - name: データ コピー ツールのトラブルシューティング
-              href: ../data-factory/copy-data-tool-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+            - name: セキュリティとアクセス制御
+              href: ../data-factory/security-and-access-control-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: セルフホステッド統合ランタイムのトラブルシューティング
               href: ../data-factory/self-hosted-integration-runtime-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
 - name: Machine Learning
@@ -973,15 +986,22 @@
       items:
         - name: Azure Machine Learning のリンクされたサービスの新規作成
           href: machine-learning/quickstart-integrate-azure-machine-learning.md
+    - name: 概念
+      items:
+        - name: モデルをトレーニングする
+          href: ./spark/apache-spark-machine-learning-training.md
     - name: チュートリアル
       items:
+        - name: Apache Spark を使用したデータの視覚化
+          href: ./spark/apache-spark-data-visualization-tutorial.md
+          displayname: machine learning
         - name: SQL プール向けのモデル スコアリング ウィザード
           href: machine-learning/tutorial-sql-pool-model-scoring-wizard.md
           displayname: machine learning
         - name: Azure AutoML を使用して回帰実験を実行する
           href: ./spark/apache-spark-azure-machine-learning-tutorial.md
           displayname: machine learning
-        - name: Apache Spark 機械学習アプリを作成する
+        - name: Apache Spark MLlib で機械学習モデルを作成する
           href: ./spark/apache-spark-machine-learning-mllib-notebook.md
           displayname: machine learning
 - name: リファレンス
@@ -1046,5 +1066,9 @@
           href: ./sql-data-warehouse/sql-data-warehouse-partner-data-management.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
         - name: 機械学習と AI
           href: ./sql-data-warehouse/sql-data-warehouse-partner-machine-learning-ai.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+        - name: システム統合
+          href: ./sql-data-warehouse/sql-data-warehouse-partner-system-integration.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
         - name: パブリック プレビュー パートナー
           href: ./sql-data-warehouse/sql-data-warehouse-partner-launch.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
+        - name: サードパーティ アプリケーションとの互換性の問題
+          href: ./sql-data-warehouse/sql-data-warehouse-partner-compatibility-issues.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
