commit translated contents

--- a/articles/firewall-manager/toc.yml
+++ b/articles/firewall-manager/toc.yml
@@ -40,6 +40,10 @@
       href: threat-intelligence-settings.md
     - name: ネットワーク規則内の FQDN
       href: fqdn-filtering-network-rules.md
+    - name: セキュリティ
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
 - name: 操作方法ガイド
   items:
     - name: セキュリティ パートナー プロバイダーのデプロイ
