commit translated contents

--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -8,12 +8,12 @@ metadata:
   author: rboucher
   ms.author: robb
   ms.date: 10/08/2019
-  ms.openlocfilehash: 16b17dcebf305059b9a0710798e1ea0a9b6f51a6
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: b4d95c54bbfce19443bf862685390fb087aaeffd
+  ms.sourcegitcommit: d22a86a1329be8fd1913ce4d1bfbd2a125b2bcae
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "86249157"
+  ms.lasthandoff: 11/26/2020
+  ms.locfileid: "96186934"
 landingContent:
 - title: Azure Monitor について
   linkLists:
@@ -42,7 +42,7 @@ landingContent:
     - text: メトリックの監視とアラート
       url: platform/alerts-metric.md
     - text: ログの分析
-      url: log-query/get-started-portal.md
+      url: ./log-query/log-analytics-tutorial.md
     - text: Log Analytics での Azure VM
       url: learn/quick-collect-azurevm.md
     - text: Log Analytics での Linux VM
