--- a/articles/iot-central/energy/index.yml
+++ b/articles/iot-central/energy/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: e0f15382d61558e72dd9c1e4ecf108bdf1655160
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: dde929044d3d7067d350e556e772a244ce754596
+  ms.sourcegitcommit: b8a175b6391cddd5a2c92575c311cc3e8c820018
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90017355"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "96122640"
 landingContent:
 - title: エネルギー ソリューションを構築する
   linkLists:
@@ -39,10 +39,8 @@ landingContent:
       url: ../core/overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: デバイスの接続 (Node.js)
-      url: ../core/tutorial-connect-device-nodejs.md
-    - text: デバイスの接続 (Python)
-      url: ../core/tutorial-connect-device-python.md
+    - text: デバイスを作成して接続する
+      url: ../core/tutorial-connect-device.md
   - linkListType: concept
     links:
     - text: デバイスの接続性
