--- a/articles/iot-central/retail/index.yml
+++ b/articles/iot-central/retail/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: 8528c3a158c85c4b70bc1d6039b459993d06ce2b
-  ms.sourcegitcommit: fbb620e0c47f49a8cf0a568ba704edefd0e30f81
+  ms.openlocfilehash: 93c5aea44586a37ac9d4c4c2647754fb7ba5659d
+  ms.sourcegitcommit: b8a175b6391cddd5a2c92575c311cc3e8c820018
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91874205"
+  ms.lasthandoff: 11/25/2020
+  ms.locfileid: "96122398"
 landingContent:
 - title: 小売ソリューションを構築する
   linkLists:
@@ -51,10 +51,8 @@ landingContent:
       url: ../core/overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: デバイスの接続 (Node.js)
-      url: ../core/tutorial-connect-device-nodejs.md
-    - text: デバイスの接続 (Python)
-      url: ../core/tutorial-connect-device-python.md
+    - text: デバイスを作成して接続する
+      url: ../core/tutorial-connect-device.md
   - linkListType: concept
     links:
     - text: デバイスの接続性
