--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -466,7 +466,7 @@
         - name: 直接
           href: direct-tutorial.md
         - name: Directions on Microsoft
-          href: directions-microsoft-tutorial.md
+          href: ./tutorial-list.md
         - name: Discovery Benefits SSO
           href: discovery-benefits-sso-tutorial.md
         - name: Displayr
@@ -1372,7 +1372,7 @@
         - name: Recognize
           href: recognize-tutorial.md
         - name: RedBrick Health
-          href: redbrickhealth-tutorial.md
+          href: ./redbrick-health-tutorial.md
         - name: RedVector
           href: redvector-tutorial.md
         - name: Reflektive
@@ -1953,9 +1953,11 @@
         - name: Atlassian Cloud
           href: atlassian-cloud-provisioning-tutorial.md
         - name: Azure Databricks SCIM Connector
-          href: 'https://docs.microsoft.com/azure/databricks/administration-guide/users-groups/scim/aad?toc=/azure/active-directory/saas-apps/toc.json&bc=/azure/active-directory/saas-apps/breadcrumb/toc.json'
+          href: /azure/databricks/administration-guide/users-groups/scim/aad?bc=%2fazure%2factive-directory%2fsaas-apps%2fbreadcrumb%2ftoc.json&toc=%2fazure%2factive-directory%2fsaas-apps%2ftoc.json
         - name: BitaBIZ
           href: bitabiz-provisioning-tutorial.md
+        - name: Bizagi Studio for Digital Process Automation
+          href: bizagi-studio-for-digital-process-automation-provisioning-tutorial.md
         - name: Blink
           href: blink-provisioning-tutorial.md
         - name: BlogIn
@@ -2018,6 +2020,8 @@
           href: github-ae-provisioning-tutorial.md
         - name: GoToMeeting
           href: citrixgotomeeting-provisioning-tutorial.md
+        - name: GroupTalk
+          href: grouptalk-provisioning-tutorial.md
         - name: Harness
           href: harness-provisioning-tutorial.md
         - name: Hootsuite
@@ -2080,6 +2084,10 @@
           href: oracle-cloud-infratstructure-console-provisioning-tutorial.md
         - name: Oracle Fusion ERP
           href: oracle-fusion-erp-provisioning-tutorial.md
+        - name: PaperCut Cloud Print Management
+          href: papercut-cloud-print-management-provisioning-tutorial.md
+        - name: Parsable
+          href: parsable-provisioning-tutorial.md
         - name: Pingboard
           href: pingboard-provisioning-tutorial.md
         - name: Playvox
