--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -33,6 +33,8 @@
       href: tutorial-load-balancer-standard-public-zonal-portal.md
     - name: Load Balancer でのポート転送の構成
       href: tutorial-load-balancer-port-forwarding-portal.md
+    - name: リージョン間ロード バランサーの作成 - ポータル
+      href: tutorial-cross-region-portal.md
 - name: サンプル
   items:
     - name: Azure CLI
