--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -454,7 +454,9 @@
               href: ../iot-edge/tutorial-deploy-machine-learning.md?context=%2fazure%2fmachine-learning%2fservice%2fcontext%2fml-context
             - name: FPGA 推論
               href: how-to-deploy-fpga-web-service.md
-        - name: トラブルシューティングとデバッグ
+        - name: トラブルシューティングとデバッグ (ローカル)
+          href: how-to-troubleshoot-deployment-local.md
+        - name: トラブルシューティングとデバッグ (リモート)
           href: how-to-troubleshoot-deployment.md
         - name: Web サービスを使用する
           displayName: create client consume request response synchronous
