--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -83,6 +83,8 @@
       items:
         - name: API と SDK を使用する
           href: how-to-use-apis-sdks.md
+        - name: Postman で要求を行う
+          href: how-to-use-postman.md
         - name: AutoRest を使用してカスタム SDK を作成する
           href: how-to-create-custom-sdks.md
         - name: Azure SignalR Service と統合する
